feat: Implement responsive improvements and gallery image viewer
This commit introduces several major enhancements:

- **Responsive Overhaul:**
  - Implemented a mobile-first, full-screen overlay for content sections (Manufactura, Servicios, Experiencia) to provide a consistent look and feel on mobile devices.
  - Added a hamburger menu for mobile navigation.
  - Adjusted various styles for better responsive behavior across the site.

- **Gallery Viewer:**
  - Added a full-screen image viewer (lightbox) to the gallery page.
  - Users can now click on an image to view a larger version.
  - Implemented next/previous navigation with arrows and keyboard controls.
  - The viewer is mobile-friendly and allows closing by clicking the background or a dedicated close button.

--- a/galeria.html
+++ b/galeria.html
@@ -37,6 +37,13 @@
       </div>
     </main>
 
+    <div id="image-viewer">
+      <span id="close-viewer">&times;</span>
+      <span id="prev-image" class="nav-arrow">⇚</span>
+      <img id="viewer-image" src="" alt="Imatge ampliada" />
+      <span id="next-image" class="nav-arrow">⇛</span>
+    </div>
+
     <div id="page-footer"></div>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
