--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="text-side">
           <h2 data-i18n="servicios.title">Servei Professional</h2>
-          <p data-i18n="servicios.paragraph">
+          <p data-i18n="servicios.paragraph" class="paragraph">
             Des de la primera idea fins al lliurament final, estem al teu costat per
             assegurar que cada detall compleixi amb les teves expectatives. Per això, t'oferim un
             servei professional integral dissenyat per fer el procés fàcil,
@@ -85,7 +85,7 @@
           <div class="infografia-position">
             <h3 data-i18n="experiencia.subtitle">Claus de l'Èxit</h3>
             <div class="infografia-6">
-              <p data-i18n="experiencia.point1">Assessorament Personalitzat i Creatiu</p>
+              <p data-i18n="experiencia.point1">Dissenys a mida</p>
               <p data-i18n="experiencia.point2">Gestió Integral de Comandes</p>
               <p data-i18n="experiencia.point3">Passió per la creació manual i l'artesania</p>
               <p data-i18n="experiencia.point4">Compromís amb el client</p>
